[workspace]
members = [
    "crates/vpn-types",
    "crates/vpn-core",
    "crates/vpn-daemon",
    "crates/vpn-tui",
    "crates/vpn-parse",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Hexogen"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = "0.28"
fmt = "9.10"
