[package]
name = "vpn-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
vpn-core = { path = "../vpn-core" }
vpn-types = { path = "../vpn-types" }

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
lic = "0.4.0"
libc = "0.2.185"
nix = "0.31.2"
tokio-util = "0.7.18"
gip = "0.7.1"
scopeguard = "1.2.0"
futures = "0.3.32"
aes-gcm = { version = "0.10.3", features = ["std"] }
aead = "0.5.2"
rand = "0.10.1"
getrandom = "0.4.2"
